A styling bug occured on mobile phone and not in the browser on desktop.

--- a/src/components/DocumentList.scss
+++ b/src/components/DocumentList.scss
@@ -150,7 +150,7 @@
 
 .document-item__image{
   height: auto;
-  width: 120%;
+  width: 30px;
 }
 
 .add-document{
